@@ -34,14 +34,14 @@ main (void)
 
   if (fd == -1)
     {
-      printf ("%Zd: cannot open temporary file: %m\n", __LINE__);
+      printf ("%u: cannot open temporary file: %m\n", __LINE__);
       exit (1);
     }
 
   f = fdopen (fd, "w");
   if (f == NULL)
     {
-      printf ("%Zd: cannot fdopen temporary file: %m\n", __LINE__);
+      printf ("%u: cannot fdopen temporary file: %m\n", __LINE__);
       exit (1);
     }
 
@@ -51,20 +51,20 @@ main (void)
   f = fopen (name, "r");
   if (f == NULL)
     {
-      printf ("%Zd: cannot fopen temporary file: %m\n", __LINE__);
+      printf ("%u: cannot fopen temporary file: %m\n", __LINE__);
       exit (1);
     }
 
   if (fread (temp, 1, strlen (test), f) != strlen (test))
     {
-      printf ("%Zd: couldn't read the file back: %m\n", __LINE__);
+      printf ("%u: couldn't read the file back: %m\n", __LINE__);
       exit (1);
     }
   temp [strlen (test)] = '\0';
 
   if (strcmp (test, temp))
     {
-      printf ("%Zd: read different string than was written:\n%s%s",
+      printf ("%u: read different string than was written:\n%s%s",
 	      __LINE__, test, temp);
       exit (1);
     }
@@ -72,26 +72,26 @@ main (void)
   f = freopen (name, "r+", f);
   if (f == NULL)
     {
-      printf ("%Zd: cannot freopen temporary file: %m\n", __LINE__);
+      printf ("%u: cannot freopen temporary file: %m\n", __LINE__);
       exit (1);
     }
 
   if (fseek (f, 0, SEEK_SET) != 0)
     {
-      printf ("%Zd: couldn't fseek to start: %m\n", __LINE__);
+      printf ("%u: couldn't fseek to start: %m\n", __LINE__);
       exit (1);
     }
 
   if (fread (temp, 1, strlen (test), f) != strlen (test))
     {
-      printf ("%Zd: couldn't read the file back: %m\n", __LINE__);
+      printf ("%u: couldn't read the file back: %m\n", __LINE__);
       exit (1);
     }
   temp [strlen (test)] = '\0';
 
   if (strcmp (test, temp))
     {
-      printf ("%Zd: read different string than was written:\n%s%s",
+      printf ("%u: read different string than was written:\n%s%s",
 	      __LINE__, test, temp);
       exit (1);
     }
