@@ -52,7 +52,7 @@ tst_wcscat (FILE * fp, int debug_flg)
 	      if (debug_flg)
 		{
 		  fprintf (stdout, "tst_wcscat() : ws1[%d] = 0x%lx\n", i,
-			   ws1[i]);
+			   (unsigned long int) ws1[i]);
 		}
 
 	      if (ws1[i] != ws_ex[i])
