@@ -1,3 +1,7 @@
+2002-08-25  Ulrich Drepper  <drepper@redhat.com>
+
+	* Examples/ex9.c (thread): Remove incorrect return statement.
+
 2002-08-23  Ulrich Drepper  <drepper@redhat.com>
 
 	* pthread.c (__linuxthreads_version): New global constant.
